@startuml
'https://plantuml.com/class-diagram

hide empty methods
hide empty fields

class Tenant {
    입주자
    --
    - String name
    - Broker broker
    --
    + void requestFix(String)
}

class BuildingOwner {
    건물주
    --
    - List<Furniture> furnitures
    - String name
    - Broker broker
    --
    + void requestSell()
    + void requestFix(Furniture)
}

class Furniture {
    가구
    --
    - String name
    - int durability
}

class RepairMan {
    수리 기사
    --
    - String name
    - Broker broker
    --
    + void fix(Furniture)
}

class Broker {
    중개업자
    --
    - BuildingOwner buildingOwner
    - Tenant tenant
    - RepairMan repairMan
    --
    + void mediate()
    + ...()
}


BuildingOwner *-u-> Furniture
Tenant -l-> Broker

BuildingOwner -r-> Broker
RepairMan -d-> Broker
RepairMan .l.> Furniture

Broker --> Tenant
Broker --> BuildingOwner
Broker -u-> RepairMan

@enduml